--- a/src/app/bizonylat/bizonylat-kiszallitva/bizonylat-kiszallitva.component.html
+++ b/src/app/bizonylat/bizonylat-kiszallitva/bizonylat-kiszallitva.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{bizonylatLeiro.BizonylatNev}} kiszállítva</h5>
   <div>Kiszállítva: {{Dto.Kiszallitva | boolhun}}</div>
-  <button class="btn btn-sm btn-primary" (click)="modositas()">Módosítás</button>
+  <button class="toolbutton" (click)="modositas()">Módosítás</button>
 </div>
