--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-list/bizonylatkapcsolat-list.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-list/bizonylatkapcsolat-list.component.html
@@ -1,17 +1,15 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{bizonylatkapcsolatservice.cim}}</h5>
   <div>
-    <nav>
-      <button (click)="onKereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
-      <button (click)="onUjirat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
-      </button>
-      <button (click)="onVagolaprol()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Vágólapról
-      </button>
-    </nav>
+    <button (click)="onKereses()" class="toolbutton">
+      <i class="fa fa-search" aria-hidden="true"></i>
+    </button>
+    <button (click)="onUjirat()" class="toolbutton">
+      <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
+    </button>
+    <button (click)="onVagolaprol()" class="toolbutton">
+      <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Vágólapról
+    </button>
   </div>
 
   <app-bizonylatkapcsolat-tabla #tabla
@@ -30,6 +28,8 @@
                   [enTorles]="false"
                   [enProjekt]="false"
                   [enUgyfel]="false"
+                  [(bbmode)]="egyirat_bbmode"
+                  [(egymode)]="egyirat_egymode"
                   (eventSzerkesztesutan)="onIratSzerkesztesutan($event)">
     </app-irat-egy>
   </ng-template>
