--- a/src/app/projekt/projekt-iratminta/projekt-iratminta.component.html
+++ b/src/app/projekt/projekt-iratminta/projekt-iratminta.component.html
@@ -1,52 +1,46 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Iratminta</h5>
   <div style="paddig-top: 6px;padding-bottom: 6px">
-    <nav>
-      <button (click)="szerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="szerzodes()" class="toolbutton">
         Szerződés
       </button>
-      <button (click)="szallitasiszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="szallitasiszerzodes()" class="toolbutton">
         Szállítási szerződés
       </button>
-      <button (click)="feltetelesszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="feltetelesszerzodes()" class="toolbutton">
         Feltételes szerződés
       </button>
-      <button (click)="oftszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="oftszerzodes()" class="toolbutton">
         OFT szerződés
       </button>
-      <button (click)="hmketulajdonoshozzajarulas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="hmketulajdonoshozzajarulas()" class="toolbutton">
         HMKE tulajdonos hozzájárulás
       </button>
-    </nav>
   </div>
   <div style="paddig-top: 6px;padding-bottom: 6px">
-    <nav>
-      <button (click)="munkalap()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="munkalap()" class="toolbutton">
         Munkalap
       </button>
-      <button (click)="elegedettseg()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="elegedettseg()" class="toolbutton">
         Elégedettségi felmérés
       </button>
-    </nav>
   </div>
   <div style="paddig-top: 6px;padding-bottom: 6px">
-    <nav>
-      <button (click)="elmuemasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="elmuemasz()" class="toolbutton">
         ELMŰ-ÉMÁSZ készrejelentés
       </button>
-      <button (click)="eon()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="eon()" class="toolbutton">
         E.ON készrejelentés
       </button>
-      <button (click)="mvm()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="mvm()" class="toolbutton">
         MVM készrejelentés
       </button>
 
-      <button (click)="eonelmu()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="eonelmu()" class="toolbutton">
         EON/ELMÜ készrejelentés
       </button>
-      <button (click)="mvmemasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="mvmemasz()" class="toolbutton">
         MVM/ÉMÁSZ készrejelentés
       </button>
-    </nav>
   </div>
 </div>
