--- a/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
+++ b/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
@@ -28,7 +28,7 @@
     </tr>
     </tbody>
   </table>
-  <button (click)="letoltesClick()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+  <button (click)="letoltesClick()" class="toolbutton">
     Letöltés
   </button>
 </div>
