--- a/src/app/vagolap/vagolap-bizonylathoz/vagolap-bizonylathoz.component.html
+++ b/src/app/vagolap/vagolap-bizonylathoz/vagolap-bizonylathoz.component.html
@@ -1,1 +1,4 @@
-<p>vagolap-bizonylathoz works!</p>
+<div class="alapkeret">
+  <h5>Vágólap</h5>
+  <div>A bizonylat a vágólapra került!</div>
+</div>
