--- a/src/app/vagolap/vagolap.component.html
+++ b/src/app/vagolap/vagolap.component.html
@@ -1,13 +1,11 @@
 <div class="alapkeret">
   <h5 *ngIf="vagolapservice.Mode === 1">{{vagolapservice.cim}}</h5>
   <div>
-    <nav>
-      <ng-container *ngIf="vagolapservice.Mode === 1">
-        <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
-          A vágólap törlése
-        </button>
-      </ng-container>
-    </nav>
+    <ng-container *ngIf="vagolapservice.Mode === 1">
+      <button [disabled]="eppFrissit" (click)="torles()" class="toolbutton" style="margin-right: 3px">
+        A vágólap törlése
+      </button>
+    </ng-container>
   </div>
   <table class="table table-bordered table-sm table-responsive" style="border: none">
     <thead>
