--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -146,11 +146,9 @@
   </ng-container>
 
   <div class="alapkeret">
-    <nav>
-      <button (click)="onTetelUjElott()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
-      </button>
-    </nav>
+    <button (click)="onTetelUjElott()" class="toolbutton">
+      <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
+    </button>
     <app-bizonylatteteltabla #teteltabla
                              [enEdit]="true"
                              [Dto]="ComplexDtoEdited.LstTetelDto"
