--- a/src/app/penztartetel/penztartetel-szerkesztes/penztartetel-szerkesztes.component.html
+++ b/src/app/penztartetel/penztartetel-szerkesztes/penztartetel-szerkesztes.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Dátum</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="datum"
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Jogcím</div>
         <select #jogcim type="text" class="form-control form-control-sm"
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Ügyfél</div>
         <input #ugyfel type="text" class="form-control form-control-sm oszlop4" id="ugyfel"
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Bizonylatszám</div>
         <input #bizonylatszam type="text" class="form-control form-control-sm oszlop2" id="bizonylatszam"
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Bevétel</div>
         <input #bevetel type="text" class="form-control form-control-sm oszlop2" id="bevetel"
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Kiadás</div>
         <input #kiadas type="text" class="form-control form-control-sm oszlop2" id="kiadas"
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Megjegyzés</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="megjegyzes"
@@ -73,9 +73,9 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
+    <div class="editform-okcancel">
+      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
