--- a/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
+++ b/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
@@ -1,10 +1,10 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Ügyféltér link</h5>
 
-  <button (click)="doUj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+  <button (click)="doUj()" class="toolbutton">
     Új ügyféltér link
   </button>
-  <button [disabled]="link === ''" (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+  <button [disabled]="link === ''" (click)="doTorles()" class="toolbutton">
     Ügyféltér link törlése
   </button>
 
